# ppc64le-cuda-benchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  litserve_app.py  pyproject.toml
.github/workflows/: docker.yml
